force-app/main/default/objects/QCCRoutingTable__mdt/QCCRoutingTable__mdt.object-meta.xml
<CustomObject>
    <description>QCC Routing Data</description>
    <label>QCC Routing Table</label>
    <pluralLabel>QCC Routing Tables</pluralLabel>
</CustomObject>