force-app/main/default/objects/QCCRoutingTable__mdt/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <description>QCC Case Type</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
                <default>true</default>
                <label>Complaint</label>
            </value>
            <value>
                <fullName>Further Action Required</fullName>
            </value>
            <value>
                <fullName>On the Spot Recovery</fullName>
            </value>
            <value>
                <fullName>Medical-Patient</fullName>
            </value>
            <value>
                <fullName>Medical-Assistance Provided</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Insurance Letter</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Claims and Reimbursements</fullName>
            </value>
            <value>
                <fullName>Insurance Letters</fullName>
                <isActive>false</isActive>
                <label>Insurance Letters</label>
            </value>
            <value>
                <fullName>Medical - Assistance Provided</fullName>
                <isActive>false</isActive>
                <label>Medical - Assistance Provided</label>
            </value>
            <value>
                <fullName>Medical - Patient</fullName>
                <isActive>false</isActive>
                <label>Medical - Patient</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>