force-app/main/default/objects/QCCRoutingTable__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>QCC Category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Accommodation/Reimbursement of Expenses</fullName>
            </value>
            <value>
                <fullName>Account Queries</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Aircraft Condition</fullName>
            </value>
            <value>
                <fullName>Aircraft Schedule Change/Notification</fullName>
            </value>
            <value>
                <fullName>Airports</fullName>
            </value>
            <value>
                <fullName>Airport Security</fullName>
            </value>
            <value>
                <fullName>Announcements</fullName>
            </value>
            <value>
                <fullName>Award Bookings</fullName>
            </value>
            <value>
                <fullName>Beverage Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Cabin Baggage</fullName>
            </value>
            <value>
                <fullName>Catering Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Chauffeur Drive</fullName>
            </value>
            <value>
                <fullName>Checked Baggage</fullName>
            </value>
            <value>
                <fullName>Check in</fullName>
            </value>
            <value>
                <fullName>Check-In</fullName>
            </value>
            <value>
                <fullName>Child/Infant Items</fullName>
            </value>
            <value>
                <fullName>Class Action Refunds</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Customer Behaviour</fullName>
            </value>
            <value>
                <fullName>Customer behaviour/Customer offload</fullName>
            </value>
            <value>
                <fullName>Customer Privacy</fullName>
            </value>
            <value>
                <fullName>Customs/Immigration</fullName>
            </value>
            <value>
                <fullName>Damaged/Lost Personal Property</fullName>
            </value>
            <value>
                <fullName>Damaged Baggage – Carry On</fullName>
            </value>
            <value>
                <fullName>Delayed Baggage to Carousel</fullName>
            </value>
            <value>
                <fullName>Delayed Flight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>