force-app/main/default/objects/QCCRoutingTable__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>QCC Group Field</description>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lounges</fullName>
                <default>true</default>
                <label>Lounges</label>
            </value>
            <value>
                <fullName>Flight Disruptions</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Departure Airport</fullName>
            </value>
            <value>
                <fullName>Arrival Airport</fullName>
            </value>
            <value>
                <fullName>In-Flight</fullName>
            </value>
            <value>
                <fullName>Frequent Flyer</fullName>
            </value>
            <value>
                <fullName>Qantas.com</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Delayed Baggage</fullName>
            </value>
            <value>
                <fullName>Damaged Baggage</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Delayed Flight</fullName>
            </value>
            <value>
                <fullName>Delayed or Lost Baggage</fullName>
            </value>
            <value>
                <fullName>Flight Cancelled by Qantas</fullName>
            </value>
            <value>
                <fullName>Personal Property Lost In-flight</fullName>
            </value>
            <value>
                <fullName>Proof of Boarding or No Show</fullName>
            </value>
            <value>
                <fullName>Request Copy of Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>EMD Refund</fullName>
            </value>
            <value>
                <fullName>TKT Refund</fullName>
            </value>
            <value>
                <fullName>OB Fee Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>