force-app/main/default/objects/QCCRoutingTable__mdt/fields/QUEUE_Name__c.field-meta.xml
<CustomField>
    <fullName>QUEUE_Name__c</fullName>
    <description>QCC Queue Name</description>
    <label>QUEUE Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>