force-app/main/default/objects/QCCRoutingTable__mdt/listViews/Customer_Connect.listView-meta.xml
<ListView>
    <fullName>Customer_Connect</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CaseType__c</columns>
    <columns>Category__c</columns>
    <columns>Group__c</columns>
    <columns>Order__c</columns>
    <columns>QUEUE_Name__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>Customer Connect</label>
</ListView>